--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 #All Variables Are Required
-BOT_TOKEN = "6755451205:AAGs17HTNeUgV5d6UkDhZ5RsNrPN8RJrU5Y"
+BOT_TOKEN = "7533283148:AAHjSdfzf3Xp68AbcuLFdO52sauAPjbePPY"
 TELEGRAM_API = "25401847"
 TELEGRAM_HASH = "ca8a79df8704ed676fca6891b7bc08ce"
-FSUB_ID = "-1001724395212"
-DUMP_CHAT_ID = "-1002037108501"
-MONGO_URL = "mongodb+srv://hegodal811:rsRu17pspZAcp6V7@cluster0.prsvqax.mongodb.net/?retryWrites=true&w=majority"
-ADMINS = "5864846606"
+FSUB_ID = "-1002306185899"
+DUMP_CHAT_ID = "-1002306185899"
+MONGO_URL = "mongodb+srv://opabhik1:opabhik1@cluster0.prsvqax.mongodb.net/?retryWrites=true&w=majority"
+ADMINS = "7175947484"
